--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,15 @@
     ],
     "require": {
         "php": ">=5.2.4",
-        "twig/twig": "1.*"
+        "twig/twig": "2.*"
     },
     "require-dev": {
         "phpunit/phpunit": ">=3.5.15"
     },
     "autoload": {
-        "psr-0": { "Twig_Extension_HTMLHelpers": "lib/" }
+        "psr-4": { "Njh\\TwigHTMLHelpers\\": "lib/" }
+    },
+    "autoload-dev": {
+        "psr-4" : { "Njh\\Tests\\" : "tests/" }
     }
 }
